# OpenCPN

./: CMakeLists.txt  REQS-4387.md
.github/workflows/: linux.yml
android/: androidUTIL.cpp
ci/: github-pre-build.sh
gui/include/gui/: TrackPropDlg.h  chcanv.h  icon_button.h  navutil.h  ocpn_frame.h  pluginmanager.h  shapefile_basemap.h  spatial_rtree.h  timeline.h
gui/src/: ConfigMgr.cpp  RoutePropDlg.cpp  RoutePropDlgImpl.cpp  TCWin.cpp  TrackPropDlg.cpp  canvasMenu.cpp  chcanv.cpp  data_monitor.cpp  gl_chart_canvas.cpp  icon_button.cpp  navutil.cpp  ocpn_app.cpp  ocpn_frame.cpp  ocpn_plugin_gui.cpp  options.cpp  pluginmanager.cpp  routemanagerdialog.cpp  shapefile_basemap.cpp  timeline.cpp  tty_scroll.cpp
include/: ocpn_plugin.h
libs/s52plib/src/: s52plib.cpp  s52plib.h
model/: CMakeLists.txt
model/include/model/: comm_navmsg.h  plugin_comm.h
model/src/: comm_navmsg.cpp  navobj_db.cpp  plugin_comm.cpp
plugins/dashboard_pi/src/: dashboard_pi.cpp  dashboard_pi.h
plugins/grib_pi/: CMakeLists.txt  README.md
plugins/grib_pi/src/: CursorData.cpp  CustomGrid.cpp  GribOverlayFactory.cpp  GribOverlayFactory.h  GribReader.cpp  GribRecord.cpp  GribRecord.h  GribRecordSet.cpp  GribRecordSet.h  GribRequestDialog.cpp  GribSettingsDialog.cpp  GribTable.cpp  (+30 more)
plugins/grib_pi/tests/: CMakeLists.txt  README.md  grib_layer_set_test.cpp  grib_layer_test.cpp  mock_defs.cpp  mock_defs.h
plugins/grib_pi/tests/testdata/: .gitignore  GFS20250122170501904.grb  HRRR20250122170401901.grb  XyGrib_2025-01-20-12-43_GFS_0P25_WW3.grb2  invalid.grb  ocpn_ecmwf0p25_24_2024-11-24-18-29.grb2
po/: POTFILES.in  opencpn.pot
requirements/: README.md  task-1.1-analyze-spatial-data-systems.md  task-1.2-design-multi-source-abstraction.md  task-1.3-prototype-multi-source-indexing.md  task-2.1-implement-production-spatial-index.md  task-2.2-develop-multi-source-data-adapters.md  task-3.1-implement-distance-field-optimization.md  task-3.2-develop-intelligent-caching.md  task-4.1-replace-gshhs-crossesland.md  task-4.2-implement-enhanced-api.md  task-5.1-implement-depth-contour-integration.md  task-5.2-implement-basic-route-finding.md  task-6.1-performance-optimization-benchmarking.md  task-6.2-comprehensive-integration-testing.md  task-prompt-template.md
test/: CMakeLists.txt  spatial_rtree_tests.cpp  tests.cpp
(+1 files in other folders)
